--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
-[build-system]
-requires = ["uv>=0.1.0"]
-build-backend = "uv.build_meta"
+#[build-system]
+#requires = ["uv>=0.4.0"]
+
 
 [project]
 name = "apache-airflow-provider-rabbitmq"
