--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
-#[build-system]
-#requires = ["uv>=0.4.0"]
-
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project]
 name = "apache-airflow-provider-rabbitmq"
@@ -14,14 +14,18 @@ license = { file = "LICENSE" }
 requires-python = ">=3.12"
 dependencies = [
     "apache-airflow>=2.0.0,<3.0.0",
-    "pika>=1.3.0,<2.0.0",        # Sync RabbitMQ
-    "aio-pika>=9.5.0,<10.0.0",   # Async RabbitMQ
+    "pika>=1.3.0,<2.0.0",
+    "aio-pika>=9.5.0,<10.0.0",
 ]
 
-[tool.uv]
-# uv-specific settings
+[tool.hatch.build.targets.wheel]
+packages = ["src/airflow"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.pytest.ini_options]
+testpaths = "tests"
 pythonpath = "src"
 addopts = "-v --tb=short"
 
