--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,16 @@ dependencies = [
     "aio-pika>=9.5.0,<10.0.0",
 ]
 
+[project.optional-dependencies]
+development = [
+    "pytest>=7.0.0,<8.0.0",
+    "pytest-cov>=4.0.0,<5.0.0",
+    "pylint>=3.0.0,<4.0.0",
+    "black>=23.0.0,<24.0.0",
+    "isort>=5.0.0,<6.0.0",
+    "mypy>=1.0.0,<2.0.0",
+]
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/airflow"]
 
