--- a/src/airflow/providers/rabbitmq/provider.yaml
+++ b/src/airflow/providers/rabbitmq/provider.yaml
@@ -7,4 +7,4 @@ integrations:
   - integration-name: RabbitMQ
     external-doc-url: https://www.rabbitmq.com/
     how-to-guide:
-      - URL: https://github.io/pages/....
+      - URL: https://github.com/apache/airflow-provider-rabbitmq/blob/main/README.md
