--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,26 +21,13 @@ jobs:
           python-version: '3.12'
 
       - name: Install uv
-        run: |
-          pip install uv
+        uses: astral-sh/setup-uv@v5
 
-      - name: Install dependencies
-        run: |
-          uv pip install -e ".[dev]"
-
-      - name: Run tests
-        run: |
-          uv pip install pytest
-          pytest tests/
+      - name: Install the project
+        run: uv sync --all-extras --dev
 
       - name: Build package
-        run: |
-          uv build
-
-      - name: Verify built package
-        run: |
-          uv pip install build
-          python -m build --sdist --wheel --outdir dist/ .
+        run: uv build
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
