--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
 [project.optional-dependencies]
 development = [
     "pytest>=7.0.0,<8.0.0",
+    "pytest-asyncio>=0.23.0,<1.0.0",
     "pytest-cov>=4.0.0,<5.0.0",
+    "testcontainers>=4.9.2",
     "pylint>=3.0.0,<4.0.0",
     "black>=23.0.0,<24.0.0",
     "isort>=5.0.0,<6.0.0",
@@ -38,6 +40,7 @@ allow-direct-references = true
 testpaths = "tests"
 pythonpath = "src"
 addopts = "-v --tb=short"
+asyncio_mode = "auto"
 
 [tool.black]
 line-length = 88
