--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ development = [
     "testcontainers>=4.9.2",
     "pylint>=3.0.0,<4.0.0",
     "black>=23.0.0,<24.0.0",
+    "flake8>=7.2.0,<8.0.0",
     "isort>=5.0.0,<6.0.0",
     "mypy>=1.0.0,<2.0.0",
 ]
